[package]
name = "bevy-hacking"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.5.0", features = ["dynamic"] }
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic"] }
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon" }
