[package]
name = "bevy-hacking"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
#bevy = { version = "0.7.0", features = ["dynamic"] }
#bevy = {git = "https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic"] }
bevy_prototype_lyon = { version = "0.5" }
bitflags = "1"
